---------------------------------------------------------------------------
Version 5.1.6  [v5-beta] (rgerhards), 2009-09-??
- feature imports from v4.5.6
- bugfixes imported from 4.5.4:
  * bugfix: potential segfault in stream writer on destruction
  * bugfix: potential race in object loader (obj.c) during use/release
  * bugfixes: potential problems in out file zip writer
- included some important fixes from 4.4.2:
  * bugfix: invalid handling of zero-sized messages
  * bugfix: zero-sized UDP messages are no longer processed
  * bugfix: random data could be appended to message
  * bugfix: reverse lookup reduction logic in imudp do DNS queries too often
---------------------------------------------------------------------------
Version 5.1.5  [v5-beta] (rgerhards), 2009-09-11
- added new config option $ActionWriteAllMarkMessages
  this option permites to process mark messages under all circumstances,
  even if an action was recently called. This can be useful to use mark
  messages as a kind of heartbeat.
- bugfix: hostnames with dashes in them were incorrectly treated as
  malformed, thus causing them to be treated as TAG (this was a regression
  introduced from the "rfc3164 strict" change in 4.5.0). Testbench has been
  updated to include a smaple message with a hostname containing a dash.
- bugfix: strings improperly reused, resulting in some message properties
  be populated with strings from previous messages. This was caused by
  an improper predicate check.
---------------------------------------------------------------------------
Version 5.1.4  [DEVEL] (rgerhards), 2009-08-20
- legacy syslog parser changed so that it now accepts date stamps in
  wrong case. Some devices seem to create them and I do not see any harm
  in supporting that.
- added $InputTCPMaxListeners directive - permits to specify how many 
  TCP servers shall be possible (default is 20).
- bugfix: memory leak with some input modules. Those inputs that